# flask-ticket-system

./: .env.example  Dockerfile  Makefile  README.md  pyproject.toml  test.ipynb
flask_ticket_system/: config.py
flask_ticket_system/adapters/: repository.py
flask_ticket_system/domain/: __init__.py  commands.py  events.py  exceptions.py  ticket.py
flask_ticket_system/domain/rbac/: group.py  permission.py  user.py
flask_ticket_system/domain/tickets/: __init__.py  assigment.py  ticket.py
flask_ticket_system/entrypoints/flaskapp/: admin_endpoints.py  app.py  endpoints.py  messagebus.py  middleware.py  schemes.py
flask_ticket_system/service_layer/: handlers.py  unit_of_work.py
